replace logo and add in quick gif

--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,7 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# microhaplot <img src="man/figures/microhaplot-sticker.png" align="right" width="200"/>
+# microhaplot <img src="https://i.ibb.co/68M0tpT/microhaplot-logo.png" align="right" width="200"/>
 
 <!-- badges: start -->
   [![CRAN status](https://www.r-pkg.org/badges/version/microhaplot)](https://CRAN.R-project.org/package=microhaplot)
@@ -36,7 +36,10 @@ simple read-depth based filtering criteria, and curate the loci. microhaplot is 
 and quality control of haplotypes generated from library runs. Plot summaries include read depth, fraction of callable haplotypes, Hardy-Weinberg
 equilibrium plots, and more. 
 
-
+   
+<center><img src="https://i.ibb.co/F5JtHj1/microhaplot-demo-1.gif" align="center" width="500"/></center>
+   
+     
 See the **Example Data** section to learn about how to run each of these steps on the example data that are provided
 with the package.  
 
